@@ -1,0 +1,24 @@
+<jwc id="border">
+<!-- $Id$ -->
+
+This page contains a history of the requests from the client.
+This information is collected inside an <b>Enterprise JavaBean</b>.  We don't show it, but
+all query parameters are also being stored.
+
+<p><table class=inspector>
+
+<tr> <th>Time</th> <th>Server</th> <th>Method</th> <th>URI</th> </tr>
+
+<jwc id="e">
+<tr>
+<td><jwc id="insertTime"/></td>
+<td><jwc id="insertServer"/></td>
+<td><jwc id="insertMethod"/></td>
+<td><jwc id="insertURI"/></td>
+</tr>
+
+</jwc>
+
+</table>
+
+</jwc>
