@@ -2,7 +2,8 @@
 
 JAVA_FILES = *.java
 
-RESOURCE_FILES = *.jwc *.html *.gif *.application
+RESOURCE_FILES = *.jwc *.html *.gif *.application \
+	$(patsubst %.jwc,%.java,$(wildcard *.jwc))
 
 include $(SYS_MAKEFILE_DIR)/Package.mk
 
