@@ -2,6 +2,7 @@
 
 JAVA_FILES = *.java
 
-RESOURCE_FILES = *.html *.jwc
+RESOURCE_FILES = *.html *.jwc \
+	$(patsubst %.jwc,%.java,$(wildcard *.jwc))
 
 include $(SYS_MAKEFILE_DIR)/Package.mk
