@@ -1,3 +1,12 @@
+* Sep 12 2000 hship
+
+Add the ShowInspector component to the tutorial Border and the Vlib Border.
+Fix some bugs that have cropped up in the blue border demo.
+
+* Sep 8 2000 hship
+
+Modify the blue-border demo to work properly in a standalone mode.
+
 * Sep 8 2000 hship
 
 Started ChangeLog for Examples, some time after release 0.2.0.
